knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Original_Proposal_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Proposal_Due_Date__c</fullName>
    <label>Original Proposal Due Date</label>
    <type>Date</type>
</CustomField>