knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Other_Detail__c.field-meta.xml
<CustomField>
    <fullName>Other_Detail__c</fullName>
    <label>Closed Stage Detail</label>
    <type>TextArea</type>
</CustomField>