knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Other_Encounters__c.field-meta.xml
<CustomField>
    <fullName>Other_Encounters__c</fullName>
    <label>Other Encounters</label>
    <summarizedField>Services__c.Annual_Encounters__c</summarizedField>
    <summaryFilterItems>
        <field>Services__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Free Standing ED (FSED), Behavioral Health</value>
    </summaryFilterItems>
    <summaryForeignKey>Services__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>