knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Outbound_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Lead_Source__c</fullName>
    <inlineHelpText>If this Lead was created from within by someone reaching out to an Account, select the method used.</inlineHelpText>
    <label>Outbound Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>not applicable</fullName>
                <default>true</default>
                <label>not applicable</label>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>eMail</fullName>
            </value>
            <value>
                <fullName>In-person</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>