knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Override_EM_Spend__c.field-meta.xml
<CustomField>
    <fullName>Override_EM_Spend__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, prevents the Flow from updating Total EM Potential Spend</inlineHelpText>
    <label>Override EM Spend</label>
    <type>Checkbox</type>
</CustomField>