knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Override_HM_Spend__c.field-meta.xml
<CustomField>
    <fullName>Override_HM_Spend__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, prevents the Flow from updating Total HM Potential Spend</inlineHelpText>
    <label>Override HM Spend</label>
    <type>Checkbox</type>
</CustomField>