knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>b/w 0% and 50%</inlineHelpText>
    <label>Participant</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>