knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Pipeline_Date_of_Record__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Date_of_Record__c</fullName>
    <formula>if( not(isnull(Contract_Customer_Signed_Date__c)),Contract_Customer_Signed_Date__c, 
if( not(isnull(MOU_Sign_Date__c  )),MOU_Sign_Date__c  , 
if( not(isnull(Verbal_Award_Date__c )),Verbal_Award_Date__c , 
null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline Date of Record</label>
    <type>Date</type>
</CustomField>