knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Pipeline_Stage__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Stage__c</fullName>
    <label>Pipeline Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract Accepted</fullName>
            </value>
            <value>
                <fullName>Contract Negotiated</fullName>
            </value>
            <value>
                <fullName>Contract Request</fullName>
            </value>
            <value>
                <fullName>Down Select</fullName>
            </value>
            <value>
                <fullName>Marketing Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Proposal Development</fullName>
            </value>
            <value>
                <fullName>Proposal Presented</fullName>
            </value>
            <value>
                <fullName>Proposal Request</fullName>
            </value>
            <value>
                <fullName>Sales Qualified Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>