knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/PMT_Project__c.field-meta.xml
<CustomField>
    <fullName>PMT_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PMT Project</label>
    <referenceTo>inov8__PMT_Project__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>