knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/PRL_Cost__c.field-meta.xml
<CustomField>
    <fullName>PRL_Cost__c</fullName>
    <label>Patient Access Solutions Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>