knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Pro_Forma_s_Entered__c.field-meta.xml
<CustomField>
    <fullName>Pro_Forma_s_Entered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this checkbox after you have entered the pro forma data into the services</inlineHelpText>
    <label>Pro Forma $s Entered?</label>
    <type>Checkbox</type>
</CustomField>