knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Pro_Forma_Status__c.field-meta.xml
<CustomField>
    <fullName>Pro_Forma_Status__c</fullName>
    <label>Pro Forma Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Approved</fullName>
            </value>
            <value>
                <fullName>Model Confirmed</fullName>
            </value>
            <value>
                <fullName>Approved for Contracting</fullName>
            </value>
            <value>
                <fullName>Iteration Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>