knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Probability_Adj_Count__c.field-meta.xml
<CustomField>
    <fullName>Probability_Adj_Count__c</fullName>
    <formula>OPP_CNT__c *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probability Adj CNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>