knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employer Engagement Program</fullName>
            </value>
            <value>
                <fullName>Patient Access Solutions</fullName>
            </value>
            <value>
                <fullName>Patient Clinical Support</fullName>
            </value>
            <value>
                <fullName>PRL</fullName>
            </value>
            <value>
                <fullName>Care Coordination</fullName>
                <isActive>false</isActive>
                <label>Care Coordination</label>
            </value>
            <value>
                <fullName>Care Coordination Solutions</fullName>
                <isActive>false</isActive>
                <label>Care Coordination Solutions</label>
            </value>
            <value>
                <fullName>Direct to Employer - Level 1</fullName>
                <isActive>false</isActive>
                <label>Direct to Employer - Level 1</label>
            </value>
            <value>
                <fullName>Direct to Employer - Level 2</fullName>
                <isActive>false</isActive>
                <label>Direct to Employer - Level 2</label>
            </value>
            <value>
                <fullName>Direct to Employer - Level 3</fullName>
                <isActive>false</isActive>
                <label>Direct to Employer - Level 3</label>
            </value>
            <value>
                <fullName>Direct to Employer Solutions - Level 1</fullName>
                <isActive>false</isActive>
                <label>Direct to Employer Solutions - Level 1</label>
            </value>
            <value>
                <fullName>Direct to Employer Solutions - Level 2</fullName>
                <isActive>false</isActive>
                <label>Direct to Employer Solutions - Level 2</label>
            </value>
            <value>
                <fullName>Direct to Employer Solutions - Level 3</fullName>
                <isActive>false</isActive>
                <label>Direct to Employer Solutions - Level 3</label>
            </value>
            <value>
                <fullName>ED Navigation</fullName>
                <isActive>false</isActive>
                <label>ED Navigation</label>
            </value>
            <value>
                <fullName>Level 1</fullName>
                <isActive>false</isActive>
                <label>Level 1</label>
            </value>
            <value>
                <fullName>Level 2</fullName>
                <isActive>false</isActive>
                <label>Level 2</label>
            </value>
            <value>
                <fullName>Level 3</fullName>
                <isActive>false</isActive>
                <label>Level 3</label>
            </value>
            <value>
                <fullName>Patient Access Center</fullName>
                <isActive>false</isActive>
                <label>Patient Access Center</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>