knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Proforma_Version__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Version__c</fullName>
    <label>Proforma Version</label>
    <length>15</length>
    <type>Text</type>
</CustomField>