knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Program_Count__c.field-meta.xml
<CustomField>
    <fullName>Program_Count__c</fullName>
    <description>For reporting - used to relabel count of rows</description>
    <formula>IF(ISPICKVAL(Type,&quot;Existing/Incremental Margin&quot;),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>