knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Program_Transition_Start_Date_Est__c.field-meta.xml
<CustomField>
    <fullName>Program_Transition_Start_Date_Est__c</fullName>
    <description>Created as part of PR1050558-2143</description>
    <formula>Target_Contract_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Transition/Start Date (Est)</label>
    <type>Date</type>
</CustomField>