knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Program_Transition_Start_Time_Est__c.field-meta.xml
<CustomField>
    <fullName>Program_Transition_Start_Time_Est__c</fullName>
    <label>Program Transition/Start Time (Est)</label>
    <type>Time</type>
</CustomField>