knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <description>The Tenscon solution.</description>
    <inlineHelpText>Select the Tenscon product</inlineHelpText>
    <label>Program Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manpower Payroll</fullName>
            </value>
            <value>
                <fullName>Manpower Benefits</fullName>
            </value>
            <value>
                <fullName>Manpower HR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>