knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Project_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Completed_Date__c</fullName>
    <label>Project Completed Date</label>
    <type>Date</type>
</CustomField>