knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Projected_Current_Year_Margin__c.field-meta.xml
<CustomField>
    <fullName>Projected_Current_Year_Margin__c</fullName>
    <formula>IF( 
NOT ( 
ISBLANK( Actual_Start_Date__c ) 
), 
( Margin__c * (((DATE(YEAR(Actual_Start_Date__c), 12, 31) - Actual_Start_Date__c) + 1)/365)), 
( Margin__c * (((DATE(YEAR(Target_Contract_Start_Date__c), 12, 31) - Target_Contract_Start_Date__c) + 1)/365)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>