knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Projected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Start_Date__c</fullName>
    <label>Projected Start Date(s)</label>
    <type>TextArea</type>
</CustomField>