knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Projection_Category__c.field-meta.xml
<CustomField>
    <fullName>Projection_Category__c</fullName>
    <inlineHelpText>Top of Funnel - Funnel
Wild Card - Funnel
Verbal Pending - Upside/Best Case
Verbal Received - Commit
Won - Won</inlineHelpText>
    <label>Projection Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top of Funnel</fullName>
                <default>true</default>
                <label>Top of Funnel</label>
            </value>
            <value>
                <fullName>Wild Card</fullName>
            </value>
            <value>
                <fullName>Verbal Pending</fullName>
            </value>
            <value>
                <fullName>Verbal Received</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>