knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Projection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Projection_Notes__c</fullName>
    <label>Projection Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>