knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Proposal_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Date__c</fullName>
    <inlineHelpText>This is the date the first proposal was shared with the client.</inlineHelpText>
    <label>Proposal Date</label>
    <type>Date</type>
</CustomField>