knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Proposal_Financial_Terms__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Financial_Terms__c</fullName>
    <label>Proposal Financial Terms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year Contract, Auto Renew</fullName>
            </value>
            <value>
                <fullName>2% Annual Escalation</fullName>
            </value>
            <value>
                <fullName>2 Year Contract, Auto Renew</fullName>
            </value>
            <value>
                <fullName>3% Annual</fullName>
            </value>
            <value>
                <fullName>4% Annual</fullName>
            </value>
            <value>
                <fullName>60 Day Term</fullName>
            </value>
            <value>
                <fullName>90 Day Term</fullName>
            </value>
            <value>
                <fullName>Cost +</fullName>
            </value>
            <value>
                <fullName>Flat Sub/Zero Sub (no protection)</fullName>
            </value>
            <value>
                <fullName>Flat Sub/Zero Sub (VP,PP,and/or At-Risk)</fullName>
            </value>
            <value>
                <fullName>Management Fee Guarantee</fullName>
            </value>
            <value>
                <fullName>Management Solutions</fullName>
            </value>
            <value>
                <fullName>Non Solicitation for CHC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Variable Subsidy (Case Rate)</fullName>
            </value>
            <value>
                <fullName>Variable Subsidy (Lease-Back)</fullName>
            </value>
            <value>
                <fullName>Managed Services Agreement</fullName>
                <isActive>false</isActive>
                <label>Managed Services Agreement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>