knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Proposal_RFP_Documents_Started__c.field-meta.xml
<CustomField>
    <fullName>Proposal_RFP_Documents_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of PR1050558-2143</description>
    <label>Proposal / RFP Documents Started</label>
    <type>Checkbox</type>
</CustomField>