knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Proposed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Amount__c</fullName>
    <description>Total amount on proposal sent to buyer</description>
    <inlineHelpText>Enter the total contract amount.</inlineHelpText>
    <label>Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>