knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Q2__c.field-meta.xml
<CustomField>
    <fullName>Q2__c</fullName>
    <label>Q2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>