knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Qtrly_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Qtrly_Forecast_Category__c</fullName>
    <label>Qtrly Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Omitted</fullName>
            </value>
            <value>
                <fullName>Current Year Closed Deals</fullName>
            </value>
            <value>
                <fullName>Current Year Commited Deals</fullName>
            </value>
            <value>
                <fullName>Current Year Upside Deals</fullName>
            </value>
            <value>
                <fullName>Previous Year Contributing Deals</fullName>
            </value>
            <value>
                <fullName>Christus Deals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>