knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Questions_Due_Back_To_Client_RFP_RFI__c.field-meta.xml
<CustomField>
    <fullName>Questions_Due_Back_To_Client_RFP_RFI__c</fullName>
    <description>Created as part of PR1050558-2143</description>
    <label>Questions Due Back To Client (RFP/RFI)</label>
    <type>Date</type>
</CustomField>