knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/RAD_Stage__c.field-meta.xml
<CustomField>
    <fullName>RAD_Stage__c</fullName>
    <formula>if(ispickval(StageName,&apos;Qualification&apos;),&apos;Lead&apos;,
if(ispickval(StageName,&apos;Needs Analysis&apos;),&apos;Lead&apos;,
if(ispickval(StageName,&apos;Proposal&apos;),&apos;Proposal Process&apos;,
if(ispickval(StageName,&apos;Negotiation&apos;),&apos;Lead&apos;,
if(ispickval(StageName,&apos;Closed Won&apos;),&apos;Signed&apos;,
if(ispickval(StageName,&apos;Prospecting&apos;),&apos;Lead&apos;,
if(ispickval(StageName,&apos;Pre-Qualified Lead&apos;),&apos;Lead&apos;,
if(ispickval(StageName,&apos;Sales Accepted Lead&apos;),&apos;Lead&apos;,
if(ispickval(StageName,&apos;Qualify and Discover Needs&apos;),&apos;Lead&apos;,
if(ispickval(StageName,&apos;Build Sales Strategy&apos;),&apos;Proposal Process&apos;,
if(ispickval(StageName,&apos;Develop Sponsorship&apos;),&apos;Proposal Process&apos;,
if(ispickval(StageName,&apos;Validate Solution&apos;),&apos;Proposal Process&apos;,
if(ispickval(StageName,&apos;Down Select&apos;),&apos;Proposal Process&apos;,
if(ispickval(StageName,&apos;Negotiate Contract &amp; Close&apos;),&apos;Awarded&apos;,
if(ispickval(StageName,&apos;Contract Request&apos;),&apos;Proposal Process&apos;,
if(ispickval(StageName,&apos;MOU Signed&apos;),&apos;Awarded&apos;,
if(ispickval(StageName,&apos;Contract Negotiations&apos;),&apos;Proposal Process&apos;,
if(ispickval(StageName,&apos;Contract Accepted&apos;),&apos;Proposal Process&apos;,
if(ispickval(StageName,&apos;Implement&apos;),&apos;Signed&apos;,
if(ispickval(StageName,&apos;Confirm Customer Satisfaction&apos;),&apos;Signed&apos;,
if(ispickval(StageName,&apos;Project Complete&apos;),&apos;Signed&apos;,
if(ispickval(StageName,&apos;Closed-No Bid&apos;),&apos;Lost/Inactive&apos;,
if(ispickval(StageName,&apos;Closed Lost&apos;),&apos;Lost/Inactive&apos;,
if(ispickval(StageName,&apos;Closed - SCP Declined&apos;),&apos;Lost/Inactive&apos;,
if(ispickval(StageName,&apos;Closed - Client Abandoned Proposal&apos;),&apos;Lost/Inactive&apos;,
if(ispickval(StageName,&apos;Quarterly Target&apos;),&apos;Quarterly Target&apos;,
if(ispickval(StageName,&apos;Closed - Consulting Project Complete&apos;),&apos;Signed&apos;,
if(ispickval(StageName,&apos;Closed - No Change&apos;),&apos;Closed - No Change&apos;,
if(ispickval(StageName,&apos;Closed - No Change/Lost&apos;),&apos;Closed - No Change/Lost&apos;,
&apos;error&apos;)))))))))))))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSA Stage</label>
    <type>Text</type>
</CustomField>