knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Reason_for_First_Meeting_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_First_Meeting_Detail__c</fullName>
    <label>Reason for First Meeting Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>