knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Recruiting_DL__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_DL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruiting DL</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Recruiting DL)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>