knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Request_Stage_Progression__c.field-meta.xml
<CustomField>
    <fullName>Request_Stage_Progression__c</fullName>
    <label>Request Stage Progression</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Request Progression to Sales Qualified Opportunity</fullName>
            </value>
            <value>
                <fullName>Request Progression to Proposal Requested</fullName>
            </value>
            <value>
                <fullName>Request Progression to Proposal Development</fullName>
            </value>
            <value>
                <fullName>Request Progression to Proposal Presented</fullName>
            </value>
            <value>
                <fullName>Request Progression to Down Select</fullName>
            </value>
            <value>
                <fullName>Request Progression to Contract Request/MOU Approved</fullName>
            </value>
            <value>
                <fullName>Request to Close Opportunity/Contract Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>