knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <inlineHelpText>Patient Collections plus HPSA (If any)</inlineHelpText>
    <label>Patient Collections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>