knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Revenue_Cycle_Finance_DL__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Cycle_Finance_DL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Cycle / Finance DL</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Revenue Cycle / Finance DL)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>