knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/RFP_Proposal_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>RFP_Proposal_Due_Date__c</fullName>
    <label>RFP/Proposal Due Date</label>
    <type>Date</type>
</CustomField>