knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Risk_Analytics_DL__c.field-meta.xml
<CustomField>
    <fullName>Risk_Analytics_DL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Analytics DL</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Risk Analytics DL)</relationshipLabel>
    <relationshipName>Opportunities8</relationshipName>
    <type>Lookup</type>
</CustomField>