knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <formula>Participant__c + Quarterback__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Participant and Quarterback fields, cannot exceed 50%</inlineHelpText>
    <label>Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>